# desktop-stream-thingy

./: .eslintrc.cjs  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/organisms/: read-chat.tsx
