[package]
name = "desktop-stream-thingy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-positioner = {version = "1.0", features = ["system-tray"] }
redis = "0.24.0"
tokio = {version = "1.35.0", features = ["full"] }
auto-launch = "0.4.0"
dunce = "1.0.4"
playback-rs = "0.4.3"
percent-encoding = "2.3.1"
minreq = {version = "2.11.0", features = ["https"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
